--- a/mercadolivre/src/test/resources/application.properties
+++ b/mercadolivre/src/test/resources/application.properties
@@ -4,11 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 server.contextPath=/ml
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
-logging.level.br.com.softplan=INFO
 spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 #hibernate.dialect=H2
 
-# ELASTIC SEARCH CONFIGURAÇÕES #
+# ELASTIC SEARCH CONFIGURAÃ‡Ã•ES #
 elasticsearch.clustername=mercadolivre
 elasticsearch.host=localhost
 elasticsearch.port=9600
